# ophion

./: CREDITS  configure  meson.build  meson_options.txt
authd/: meson.build
bandb/: meson.build
doc/: credits-past.txt  ircd.conf.example  reference.conf
extensions/: m_webirc.c  meson.build
help/: meson.build
include/: account.h  client.h  hook.h  messages.h  modules.h  numeric.h  propertyset.h  s_conf.h  s_serv.h  sasl.h
ircd/: account.c  client.c  ircd.c  listener.c  match.c  meson.build  msgbuf.c  newconf.c  s_conf.c  s_serv.c  s_user.c  sslproc.c  supported.c
ircd/ophion/: meson.build
librb/include/: commio-ssl.h  rb_commio.h
librb/src/: commio.c  epoll.c  gnutls.c  kqueue.c  mbedtls.c  meson.build  nossl.c  openssl.c  poll.c  ports.c  radixtree.c
modules/: cap_sts.c  m_acc.c  m_chghost.c  m_invite.c  m_ircx_access.c  m_ircx_base.c  m_ircx_prop.c  m_ircx_prop_adminkey.c  m_ircx_prop_entity_account.c  m_ircx_prop_entity_channel.c  m_ircx_prop_entity_user.c  m_ircx_prop_opkey.c  m_kline.c  m_privs.c  m_register.c  m_resv.c  m_sasl_core.c  m_stats.c  m_xline.c  meson.build
modules/core/: m_ban.c  m_join.c
ssld/: meson.build  ssld.c
tools/: meson.build
wsockd/: meson.build  wsockd.c
